--- a/source/_posts/2013-08-14-packer.markdown
+++ b/source/_posts/2013-08-14-packer.markdown
@@ -32,6 +32,8 @@ Panel<a name="panel"></a>
 * Mike Fiedler [github](http://github.com/miketheman), [twitter](http://twitter.com/mikefiedler), [blog](http://www.miketheman.net)
 * Nathen Harvey [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), irc: nathenharvey, [blog](http://nathenharvey.com)
 
+<!-- more -->
+
 Chef News<a name="news"></a>
 ---------
 
