Update tags for ohai episode

--- a/source/_posts/2013-09-17-ohai.markdown
+++ b/source/_posts/2013-09-17-ohai.markdown
@@ -5,6 +5,10 @@ date: 2013-09-17 11:22
 comments: true
 categories: 
   - ohai
+  - thoughtcroft
+  - sethvargo
+  - ninefold
+  - fauxhai
 ---
 
 Join our discussion about Ohai and Ohai Plugins.
