Add proper footer to the opsworks post

--- a/source/_posts/2013-12-17-opsworks.markdown
+++ b/source/_posts/2013-12-17-opsworks.markdown
@@ -51,3 +51,16 @@ cks<a name="picks"></a>
 
 #### Nathen
   
+Download
+--------
+* Audio - Coming Soon
+* Video - Starts [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+Opsworks&iso=20131218T15&p1=419&ah=1)
+
+<hr />
+
+The Food Fight Show is brought to you by [Bryan Berry](https://twitter.com/bryanwb) and [Nathen Harvey](https://twitter.com/nathenharvey) with help from other hosts and the awesome community of Chefs.
+
+The show and the [newsletter](http://us6.campaign-archive2.com/home/?u=7d43a288e882a145b7e99c650&id=ad8186466d) are sponsored, in part, by [Opscode](http://www.opscode.com).
+
+Feedback, suggestions, and questions:  [info@foodfightshow.com](mailto:info@foodfightshow.com) or  [http://github.com/foodfight/showz](http://github.com/foodfight/showz).
+
