--- a/source/_posts/2013-12-17-opsworks.markdown
+++ b/source/_posts/2013-12-17-opsworks.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Opsworks"
+title: "OpsWorks"
 date: 2013-12-17 21:16
 comments: true
 categories: 
@@ -10,20 +10,20 @@ categories:
   - opsworks
 ---
 
-Join us on [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+Opsworks&iso=20131218T15&p1=419&ah=1) as we discuss Amazon's [Opsworks](http://aws.amazon.com/opsworks/).
+Join us on [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+OpsWorks&iso=20131218T15&p1=419&ah=1) as we discuss Amazon's [OpsWorks](http://aws.amazon.com/opsworks/).
 
 Join the conversation is #foodfightshow on Freenode IRC.
 
 # Watch Now
 
-The show will begin on [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+Opsworks&iso=20131218T15&p1=419&ah=1).
+The show will begin on [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+OpsWorks&iso=20131218T15&p1=419&ah=1).
 
 * [Panel](http://foodfightshow.org/2013/12/opsworks.html#panel)
 * [Outline](http://foodfightshow.org/2013/12/opsworks.html#outline)
 * [Picks](http://foodfightshow.org/2013/12/opsworks.html#picks)
 * Download
   * Audio - Coming Soon
-  * Video - Starts [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+Opsworks&iso=20131218T15&p1=419&ah=1)
+  * Video - Starts [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+OpsWorks&iso=20131218T15&p1=419&ah=1)
 
 Panel<a name="panel"></a>
 -----
@@ -54,7 +54,7 @@ cks<a name="picks"></a>
 Download
 --------
 * Audio - Coming Soon
-* Video - Starts [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+Opsworks&iso=20131218T15&p1=419&ah=1)
+* Video - Starts [Wednesday, December 18, 2013 at 20:00 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+70+-+OpsWorks&iso=20131218T15&p1=419&ah=1)
 
 <hr />
 
