--- a/source/_posts/2013-12-17-opsworks.markdown
+++ b/source/_posts/2013-12-17-opsworks.markdown
@@ -37,7 +37,7 @@ Panel<a name="panel"></a>
 Outline<a name="outline"></a>
 -------
 
-* [#ChefConf 2014] ultra-early-bird pricing ends on 31 December.  Get your tickets now!
+* [#ChefConf 2014](http://chefconf.com) ultra-early-bird pricing ends on 31 December.  Get your tickets now!
 * Upcoming Chef Training Events
   * [Philadelphia](http://www.getchef.com/blog/event/2-day-chef-fundamentals-philadelphia-area/)
   * [San Francisco](http://www.getchef.com/blog/event/2-day-chef-fundamentals-san-francisco-4/)
