--- a/source/_posts/2014-08-27-chefdk.markdown
+++ b/source/_posts/2014-08-27-chefdk.markdown
@@ -14,22 +14,30 @@ categories:
   - serdarsutay
 ---
 
-Join our panelists as we discuss [ChefDK](https://github.com/opscode/chef-dk)!
+Join our panelists as we discuss [ChefDK](https://github.com/opscode/chef-dk)!  You can also join the discussion in #foodfightshow on freenode irc.
 
-This episode will be broadcast on [Thursday, August 28 at 1630 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+-+ChefDK&iso=20140828T1230&p1=419&ah=1).  
+Watch Now
+---------
+
+<iframe width="420" height="315" src="http://www.youtube.com/embed/Mm2lsAwd7yA" frameborder="0" allowfullscreen></iframe>
 
 * [Panel](http://foodfightshow.org/2014/08/chefdk.html#panel)
 * [Outline](http://foodfightshow.org/2014/08/chefdk.html#outline)
 * [Picks](http://foodfightshow.org/2014/08/chefdk.html#picks)
 * Download
-  * Video - Coming soon - broadcasting on [Thursday, August 28 at 1630 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+-+ChefDK&iso=20140828T1230&p1=419&ah=1)
+  * [Video](http://youtu.be/Mm2lsAwd7yA)
   * Audio - Coming soon
 
 
 Panel<a name="panel"></a>
 -----
 * Daniel DeLeo - [github](https://github.com/danielsdeleo), [twitter](http://twitter.com/kallistec)
+* John Deatherage - [github](https://github.com/RouteLastResort), [twitter](https://twitter.com/RouteLastResort)
 * Serdar Sutay - [github](https://github.com/sersut), [twitter](https://twitter.com/serdarsutay)
+* Tara Hernandez - [twitter](https://twitter.com/tequilarista)
+* Jonathan Hartman [github](http://github.com/roboticcheese), [twitter](http://twitter.com/roboticcheese), irc: roboticcheese
+* Jason Reslock - [github](https://github.com/jreslock), [twitter](https://twitter.com/jreslock)
+* Joshua Timberman - [github](https://github.com/jtimberman), [twitter](https://twitter.com/jtimberman), [blog](http://jtimberman.housepub.org)
 * Nathen Harvey - [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), irc: nathenharvey, [blog](http://nathenharvey.com)
 
 [Add your ideas to the show notes](https://github.com/foodfight/showz/blob/master/scripts/episode78-chefdk.md).
@@ -122,15 +130,23 @@ Here's a brief outline of some of the things we'd like to discuss.  [Add your id
   * should the CI server use ChefDK or should the cookbook's Gemfile specify the version of testing tools?
   * Is ChefDK ready for me to start using today?  What edges am I likely to find?
   * Should I consider migrating my knife plugin to a chef plugin?
+  * When can I recommend ChefDK to Windows engineers?
+  * Is there any way to configure ChefDK, like [generator cookbook path](https://github.com/opscode/chef-dk/blob/02fd3ff8715da5583907e135187ff9d52efab2f6/lib/chef-dk/command/generator_commands.rb#L36-L61)
+
 
 Picks<a name="picks"></a>
 -----
 
 #### Dan
 
+#### John
+
 #### Serdar
 
 #### Nathen
+
+* \#feedsteven - What are your favorite Food Fight Show episodes?
+* Seth Vargo
 
 Download
 --------
