--- a/source/_posts/2014-08-27-chefdk.markdown
+++ b/source/_posts/2014-08-27-chefdk.markdown
@@ -32,17 +32,13 @@ Watch Now
 Panel<a name="panel"></a>
 -----
 * Daniel DeLeo - [github](https://github.com/danielsdeleo), [twitter](http://twitter.com/kallistec)
+* Jason Reslock - [github](https://github.com/jreslock), [twitter](https://twitter.com/jreslock)
 * John Deatherage - [github](https://github.com/RouteLastResort), [twitter](https://twitter.com/RouteLastResort)
 * Serdar Sutay - [github](https://github.com/sersut), [twitter](https://twitter.com/serdarsutay)
-* Tara Hernandez - [twitter](https://twitter.com/tequilarista)
-* Jonathan Hartman [github](http://github.com/roboticcheese), [twitter](http://twitter.com/roboticcheese), irc: roboticcheese
-* Jason Reslock - [github](https://github.com/jreslock), [twitter](https://twitter.com/jreslock)
+* Tara Hernandez - [github](https://github.com/tarahernandez, )[twitter](https://twitter.com/tequilarista), irc:  tequilarista
 * Joshua Timberman - [github](https://github.com/jtimberman), [twitter](https://twitter.com/jtimberman), [blog](http://jtimberman.housepub.org)
+* Mike Fiedler - [github](http://github.com/miketheman), [twitter](http://twitter.com/mikefiedler), [blog](http://www.miketheman.net)
 * Nathen Harvey - [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), irc: nathenharvey, [blog](http://nathenharvey.com)
-
-[Add your ideas to the show notes](https://github.com/foodfight/showz/blob/master/scripts/episode78-chefdk.md).
-
-<!-- more -->
 
 Outline<a name="outline"></a>
 -------
@@ -91,10 +87,10 @@ There are also a number of classes being offered [online](http://www.getchef.com
 
 ### Show Notes
 
-Here's a brief outline of some of the things we'd like to discuss.  [Add your ideas to the show notes](https://github.com/foodfight/showz/blob/master/scripts/episode78-chefdk.md).
+Here's a brief outline of some of the things we'd like to discuss.
 
 * Intro to ChefDK
-  * The [Chef Development Kit (ChefDK)](http://downloads.getchef.com/ChefDK/)
+  * The [Chef Development Kit (ChefDK)](http://downloads.getchef.com/chef-dk/)
   * What's in the box?
     * [Berkshelf 3.0](http://berkshelf.com/)
     * [Test Kitchen](http://kitchen.ci/)
@@ -102,13 +98,16 @@ Here's a brief outline of some of the things we'd like to discuss.  [Add your id
     * [Foodcritic](http://acrmp.github.io/foodcritic/)
     * All the Chef tools you'd usually install on a workstation:  knife, ohai, chef-client, chef-zero
     * New command-line tool called [chef](http://docs.getchef.com/ctl_chef.html)
-  * Supported operating systems?
+  * Supported operating systems - As of version 0.2.1 the following Operating Systems are supported
+    * Mac OS X 10.8, 10.9
+    * Windows 7, 8, 8.1 & Server 2008 R2, 2012, 2012 R2
+    * Ubuntu Linux 12.04, 13.10
+    * Red Hat Enterprise Linux 6
 
 * Using ChefDK
-  * Do I have to use all the tools that come with ChefDK?
   * Using the `chef` command
     * `verify`
-    * Maybe touch on `exec`, `gem`, and `shell-init`
+    * Some glue commands - `exec`, `gem`, and `shell-init`
     * `generate`
       * `coobkook`
       * `recipe`
@@ -124,8 +123,7 @@ Here's a brief outline of some of the things we'd like to discuss.  [Add your id
 
 * Future of ChefDK
   * [`Policyfile.rb`](https://github.com/opscode/chef-dk/blob/master/POLICYFILE_README.md) - let's review this file!  It's where the future magic lies!
-  * How do I contribute ideas, code, etc?
-
+* Chef Docs Repo: [https://github.com/opscode/chef-docs](https://github.com/opscode/chef-docs)
 * Questions for the panelists:
   * should the CI server use ChefDK or should the cookbook's Gemfile specify the version of testing tools?
   * Is ChefDK ready for me to start using today?  What edges am I likely to find?
@@ -133,24 +131,64 @@ Here's a brief outline of some of the things we'd like to discuss.  [Add your id
   * When can I recommend ChefDK to Windows engineers?
   * Is there any way to configure ChefDK, like [generator cookbook path](https://github.com/opscode/chef-dk/blob/02fd3ff8715da5583907e135187ff9d52efab2f6/lib/chef-dk/command/generator_commands.rb#L36-L61)
 
+* Commands to install ChefDK from command line:
+  * Install latest released version - `curl -L https://www.getchef.com/chef/install.sh | sudo bash -s -- -P chefdk`
+  * Install nightly build - `curl -L https://www.getchef.com/chef/install.sh | sudo bash -s -- -P chefdk -n`
+
 
 Picks<a name="picks"></a>
 -----
 
+* Daniel DeLeo - [github](https://github.com/danielsdeleo), [twitter](http://twitter.com/kallistec)
+* Jason Reslock - [github](https://github.com/jreslock), [twitter](https://twitter.com/jreslock)
+* John Deatherage - [github](https://github.com/RouteLastResort), [twitter](https://twitter.com/RouteLastResort)
+* Serdar Sutay - [github](https://github.com/sersut), [twitter](https://twitter.com/serdarsutay)
+* Tara Hernandez - [twitter](https://twitter.com/tequilarista)
+* Joshua Timberman - [github](https://github.com/jtimberman), [twitter](https://twitter.com/jtimberman), [blog](http://jtimberman.housepub.org)
+* Mike Fiedler - [github](http://github.com/miketheman), [twitter](http://twitter.com/mikefiedler), [blog](http://www.miketheman.net)
+* Nathen Harvey - [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), irc: nathenharvey, [blog](http://nathenharvey.com)
+
 #### Dan
+
+* [Seattle Reign](https://www.youtube.com/watch?v=IGvvgbraDKg) - [website](http://www.reignfc.com/)
+* [Spaced](http://www.amazon.com/Spaced-The-Complete-Series-Various/dp/B0019MFY3Q#)
+
+#### Jason
+
+* [Test Driven Infrastructure with Chef](http://shop.oreilly.com/product/0636920030973.do)
+* [Exercism](http://exercism.io/)
 
 #### John
 
 #### Serdar
 
+#### Tara
+
+* [SkyBase - Finding your way in Hybrid Clouds](http://www.slideshare.net/VladKuusk/sky-base-presentation)
+
+#### Joshua
+
+* [ChefDK and Ruby](http://jtimberman.housepub.org/blog/2014/04/30/chefdk-and-ruby/)
+* [Tim Sutton's OS X templates for Packer and VeeWee](https://github.com/timsutton/osx-vm-templates)
+* [Bento packer definitions for os x](https://github.com/opscode/bento)
+* [Ruby Rogues podcast episode 169 - Version Managers with Michal Papis, Mislav Maronić and Postmodern Mod III](http://rubyrogues.com/169-rr-version-managers-with-michal-papis-mislav-maronic-and-postmodern-mod-iii/)
+*
+
+#### Mike
+
+* [dvm](http://fnichol.github.io/dvm/) - Effortless Docker-in-a-box for unsupported Docker platforms, like the Mac
+* [kitchen-docker](https://github.com/portertech/kitchen-docker) - A Test Kitchen Driver for Docker
+* [Arrested DevOps](http://www.arresteddevops.com/) - Awesome podcast!
+
+
 #### Nathen
 
-* \#feedsteven - What are your favorite Food Fight Show episodes?
-* Seth Vargo
+* [Seth Vargo](http://twitter.com/sethvargo)
+* Help [@stevenmurawski](https://twitter.com/stevenmurawski) find the best Food Fight Show episodes!  Tweet you favorites with hashtag **\#feedsteven**
 
 Download
 --------
-* Video - Coming soon - broadcasting on [Thursday, August 28 at 1630 UTC](http://www.timeanddate.com/worldclock/fixedtime.html?msg=Food+Fight+Show+-+ChefDK&iso=20140828T1230&p1=419&ah=1)
+* [Video](http://youtu.be/Mm2lsAwd7yA)
 * Audio - Coming soon
 
 <hr />
