--- a/source/_posts/2014-08-27-chefdk.markdown
+++ b/source/_posts/2014-08-27-chefdk.markdown
@@ -41,6 +41,8 @@ Panel<a name="panel"></a>
 * Mike Fiedler - [github](http://github.com/miketheman), [twitter](http://twitter.com/mikefiedler), [blog](http://www.miketheman.net)
 * Nathen Harvey - [github](http://github.com/nathenharvey), [twitter](http://twitter.com/nathenharvey), irc: nathenharvey, [blog](http://nathenharvey.com)
 
+<!-- more -->
+
 Outline<a name="outline"></a>
 -------
 
